samples/_failures_safe/1761421517_aca533_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e718791a.c: In function ‘main’:
./samples/SAFE/__tmp_e718791a.c:156:5: error: expected declaration or statement at end of input
  156 |     }
      |     ^
